samples/_failures_safe/1761607545_c9173a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6feffd08.c: In function ‘main’:
./samples/SAFE/__tmp_6feffd08.c:143:5: error: expected declaration or statement at end of input
  143 |     }
      |     ^
